--- a/ghc/ghc-bin.cabal.in
+++ b/ghc/ghc-bin.cabal.in
@@ -44,7 +44,8 @@ Executable ghc
     GHC-Options: -Wall
     if flag(ghci)
         Build-depends: deepseq >= 1.4 && < 1.5,
-                       ghci
+                       ghci,
+                       time
         CPP-Options: -DGHCI
         GHC-Options: -fno-warn-name-shadowing
         Other-Modules:
