--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -45,6 +45,7 @@ Library
     Exposed: False
 
     Build-Depends: base       >= 4   && < 5,
+                   deepseq    >= 1.4 && < 1.5,
                    directory  >= 1   && < 1.3,
                    process    >= 1   && < 1.3,
                    binary     == 0.7.*,
