--- a/testsuite/tests/profiling/should_run/T680.prof.sample
+++ b/testsuite/tests/profiling/should_run/T680.prof.sample
@@ -1,42 +1,41 @@
-	Thu Dec  8 15:23 2016 Time and Allocation Profiling Report  (Final)
+	Tue Dec 20 13:18 2016 Time and Allocation Profiling Report  (Final)
 
-	   T680 +RTS -hc -p -RTS
+	   T680 +RTS -p -RTS
 
-	total time  =        0.00 secs   (0 ticks @ 1000 us, 1 processor)
-	total alloc =     753,032 bytes  (excludes profiling overheads)
+	total time  =        0.20 secs   (204 ticks @ 1000 us, 1 processor)
+	total alloc = 449,729,208 bytes  (excludes profiling overheads)
 
-COST CENTRE MODULE           SRC                    %time %alloc
+COST CENTRE MODULE SRC              %time %alloc
 
-CAF         GHC.IO.Handle.FD <entire-module>          0.0    4.6
-main        Main             T680.hs:20:1-14          0.0    1.2
-foo.\       Main             T680.hs:3:12-40          0.0   25.5
-foo.bar     Main             T680.hs:(5,3)-(9,38)     0.0   29.8
-foo.bar.\   Main             T680.hs:(8,11)-(9,38)    0.0   38.2
+foo.\       Main   T680.hs:3:12-40   98.5   99.8
 
 
                                                                                     individual      inherited
 COST CENTRE          MODULE                SRC                   no.     entries  %time %alloc   %time %alloc
 
-MAIN                 MAIN                  <built-in>            104          0    0.0    0.1     0.0  100.0
- CAF                 Main                  <entire-module>       207          0    0.0    0.0     0.0   93.5
-  k                  Main                  T680.hs:12:1-17       211          1    0.0    0.0     0.0    0.0
-   foo               Main                  T680.hs:(2,1)-(9,38)  212          1    0.0    0.0     0.0    0.0
-    foo.bar          Main                  T680.hs:(5,3)-(9,38)  216          1    0.0    0.0     0.0    0.0
-     foo.bar.k'      Main                  T680.hs:6:9-34        220          1    0.0    0.0     0.0    0.0
-      k.\            Main                  T680.hs:12:16         221          1    0.0    0.0     0.0    0.0
-  main               Main                  T680.hs:20:1-14       208          1    0.0    0.0     0.0    0.0
-  r                  Main                  T680.hs:18:1-26       210          1    0.0    0.0     0.0   93.5
-   k                 Main                  T680.hs:12:1-17       213          0    0.0    0.0     0.0   93.5
-    foo              Main                  T680.hs:(2,1)-(9,38)  214          0    0.0    0.0     0.0   93.5
-     foo.\           Main                  T680.hs:3:12-40       215       4001    0.0   25.5     0.0   25.5
-     foo.bar         Main                  T680.hs:(5,3)-(9,38)  217          0    0.0   29.8     0.0   68.0
-      foo.bar.\      Main                  T680.hs:(8,11)-(9,38) 218       4001    0.0   38.2     0.0   38.2
-       foo.bar.\.k'' Main                  T680.hs:8:15-27       219       4000    0.0    0.0     0.0    0.0
-      foo.bar.k'     Main                  T680.hs:6:9-34        222          0    0.0    0.0     0.0    0.0
- CAF                 GHC.Conc.Signal       <entire-module>       201          0    0.0    0.1     0.0    0.1
- CAF                 GHC.IO.Encoding       <entire-module>       191          0    0.0    0.4     0.0    0.4
- CAF                 GHC.IO.Encoding.Iconv <entire-module>       189          0    0.0    0.0     0.0    0.0
- CAF                 GHC.IO.Handle.FD      <entire-module>       181          0    0.0    4.6     0.0    4.6
- CAF                 GHC.IO.Handle.Text    <entire-module>       179          0    0.0    0.0     0.0    0.0
- CAF                 GHC.Show              <entire-module>       165          0    0.0    0.0     0.0    0.0
- main                Main                  T680.hs:20:1-14       209          0    0.0    1.2     0.0    1.2
+MAIN                 MAIN                  <built-in>            108          0    0.0    0.0   100.0  100.0
+ CAF                 Main                  <entire-module>       215          0    0.0    0.0   100.0  100.0
+  k                  Main                  T680.hs:12:1-17       219          1    0.0    0.0     0.0    0.0
+   foo               Main                  T680.hs:(2,1)-(9,38)  220          1    0.0    0.0     0.0    0.0
+    foo.bar          Main                  T680.hs:(5,3)-(9,38)  224          1    0.0    0.0     0.0    0.0
+     foo.bar.k'      Main                  T680.hs:6:9-34        228          1    0.0    0.0     0.0    0.0
+      k.\            Main                  T680.hs:12:16         229          1    0.0    0.0     0.0    0.0
+  main               Main                  T680.hs:20:1-14       216          1    0.0    0.0     0.0    0.0
+  r                  Main                  T680.hs:18:1-26       218          1    0.0    0.0   100.0  100.0
+   k                 Main                  T680.hs:12:1-17       221          0    0.0    0.0   100.0  100.0
+    foo              Main                  T680.hs:(2,1)-(9,38)  222          0    0.0    0.0   100.0  100.0
+     foo.\           Main                  T680.hs:3:12-40       223       4001   98.5   99.8    98.5   99.8
+     foo.bar         Main                  T680.hs:(5,3)-(9,38)  225          0    0.5    0.0     1.5    0.2
+      foo.bar.\      Main                  T680.hs:(8,11)-(9,38) 226       4001    1.0    0.1     1.0    0.1
+       foo.bar.\.k'' Main                  T680.hs:8:15-27       227       4000    0.0    0.0     0.0    0.0
+        foo.bar.k'   Main                  T680.hs:6:9-34        232          0    0.0    0.0     0.0    0.0
+         k.\         Main                  T680.hs:12:16         233          0    0.0    0.0     0.0    0.0
+      foo.bar.k'     Main                  T680.hs:6:9-34        230          0    0.0    0.0     0.0    0.0
+       k.\           Main                  T680.hs:12:16         231          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.Conc.Signal       <entire-module>       206          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.IO.Encoding       <entire-module>       194          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.IO.Encoding.Iconv <entire-module>       192          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.IO.Handle.FD      <entire-module>       184          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.IO.Handle.Text    <entire-module>       182          0    0.0    0.0     0.0    0.0
+ CAF                 GHC.Show              <entire-module>       168          0    0.0    0.0     0.0    0.0
+ main                Main                  T680.hs:20:1-14       217          0    0.0    0.0     0.0    0.0
